android-platform-libcore (6.0.1+r16-1) UNRELEASED; urgency=medium

  [ Hans-Christoph Steiner ]
  * New upstream release to sync with all android-tools projects

  [Kai-Chung Yan]
  * New package: libandroid-luni-23-java
  * Set json.jar & dex.jar to version 0 (Upstream does not version them)
  * Add groupId to filename for json and dex (Upstream does not name them)
  * Change package name: libdex-java => libandroid-dex-23-java

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 18 Feb 2016 20:35:30 +0800

android-platform-libcore (6.0.1+r10-2) unstable; urgency=medium

  * d/control: Standards-Version => 3.9.7 (No change)
  * d/rules: Remove unused javahelper override
  * Use javahelper to install Javadoc
  * Fix Vcs-Git

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 04 Feb 2016 21:40:03 +0800

android-platform-libcore (6.0.1+r10-1) unstable; urgency=low

  * Initial release (Closes: #795995)

 -- Kai-Chung Yan <seamlikok@gmail.com>  Fri, 15 Jan 2016 17:20:44 +0800