@@ -15,7 +15,7 @@ Files: dom/*
        luni/src/main/java/org/w3c/*
        luni/src/test/java/tests/org/w3c/*
 Copyright: 2001-2004, World Wide Web Consortium
-License: BSD-3-clause
+License: W3C
 
 Files: harmony-tests/*
        luni/src/main/java/java/*
@@ -53,7 +53,7 @@ Files: luni/src/main/java/java/nio/charset/CharsetDecoderICU.java
        luni/src/main/native/libcore_icu_NativeCollation.cpp
        luni/src/main/native/libcore_icu_NativeConverter.cpp
 Copyright: 1995-2014, International Business Machines Corporation and others
-License: MIT
+License: ICU
 
 Files: luni/src/main/native/canonicalize_path.cpp
 Copyright: 2003, Constantin S. Svintsoff <kostik@iclub.nsu.ru>
@@ -216,3 +216,36 @@ License: openssl
     acknowledgment:
     "This product includes software developed by the OpenSSL Project
     for use in the OpenSSL Toolkit (http://www.openssl.org/)"
+
+License: W3C
+ Copyright (c) 2001-2004 World Wide Web Consortium, (Massachusetts Institute
+ of Technology, Institut National de Recherche en Informatique et en
+ Automatique, Keio University). All Rights Reserved. This program is
+ distributed under the W3C's Software Intellectual Property License. This
+ program is distributed in the hope that it will be useful, but WITHOUT ANY
+ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ FOR A PARTICULAR PURPOSE. See W3C License
+ http://www.w3.org/Consortium/Legal/ for more details.
+
+License: ICU
+ Permission is hereby granted, free of charge, to any person obtaining a copy of
+ this software and associated documentation files (the "Software"), to deal in
+ the Software without restriction, including without limitation the rights to
+ use, copy, modify, merge, publish, distribute, and/or sell copies of the
+ Software, and to permit persons to whom the Software is furnished to do so,
+ provided that the above copyright notice(s) and this permission notice appear
+ in all copies of the Software and that both the above copyright notice(s) and
+ this permission notice appear in supporting documentation.
+ .
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF THIRD PARTY RIGHTS. IN
+ NO EVENT SHALL THE COPYRIGHT HOLDER OR HOLDERS INCLUDED IN THIS NOTICE BE
+ LIABLE FOR ANY CLAIM, OR ANY SPECIAL INDIRECT OR CONSEQUENTIAL DAMAGES, OR ANY
+ DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
+ CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ .
+ Except as contained in this notice, the name of a copyright holder shall not be
+ used in advertising or otherwise to promote the sale, use or other dealings in
+ this Software without prior written authorization of the copyright holder.
