@@ -3,11 +3,13 @@ android-platform-libcore (6.0.1+r16-1) UNRELEASED; urgency=medium
   [ Hans-Christoph Steiner ]
   * New upstream release to sync with all android-tools projects
 
-  [Kai-Chung Yan]
+  [ Kai-Chung Yan ]
   * New package: libandroid-luni-23-java
-  * Set json.jar & dex.jar to version 0 (Upstream does not version them)
+  * Set json.jar & dex.jar to version API Level 23 (Following android.jar)
   * Add groupId to filename for json and dex (Upstream does not name them)
   * Change package name: libdex-java => libandroid-dex-23-java
+  * d/control: Move all BD-Indep to BD since there is no arch packages
+  * d/copyright: Improvements
 
  -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 18 Feb 2016 20:35:30 +0800
 
